# QUIP

./: .buildinfo  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  CITATION.cff  Makefile  Makefile.config  Makefile.fox  Makefile.rules  README  README.md  Singularity  VERSION  adaptive-qmmm-references.html  adaptive-qmmm-solutions.html  adaptive-qmmm-step0.html  adaptive-qmmm-step1.html  adaptive-qmmm-step2.html  adaptive-qmmm-step3.html  adaptive-qmmm-theory.html  adaptive-qmmm.html  adglass.html  atomeye.html  atoms.html  clusters.html  connection.html  convert.html  cp2k.html  crack.html  debug_gap_1  descriptors.html  dictionary.html  domaindecomposition.html  dynamicalsystem.html  elasticity.html  electrostaticembed.html  f2py_wrapper_gen.html  (+46 more)
.doctrees/: convert.doctree  descriptors.doctree  dictionary.doctree  dynamicalsystem.doctree  environment.pickle  index.doctree  install.doctree  potential.doctree  quippy.doctree  system.doctree
Arch/: Makefile.SunOS-mpi  Makefile.altix-mpi  Makefile.bgq_gfortran  Makefile.cray_xt3  Makefile.darwin_x86_64_gfortran_openmp  Makefile.darwin_x86_64_ifort_icc  Makefile.linux_ia64_ifort_icc_serial  Makefile.linux_x86_32_gfortran  Makefile.linux_x86_64_gfortran  Makefile.linux_x86_64_gfortran_openmpi  Makefile.linux_x86_64_ifort_icc_mpi
Attic/: AUTHORS  NOTES  bulktest-quip.f95
BuildScripts/: fix_headers  makedep.py  tag_QUIP_latest_good_version
Doc/: TS_params.xml  atomeye.rst  clusters.rst  f2py_wrapper_gen.rst  f90doc.rst  index.rst  install.rst  make_crack.py  modcontents.py  paramreader.rst  run_crack_classical_1.py  spline.rst  surface-energy.sh
Documentation/: adaptive-qmmm-step3.rst  adglass.rst  elastic.sh  farray.rst  fortranio.rst  quippy.rst  run_crack_classical.py  run_crack_lotf.py  tutorials.rst  units.rst  visualisation.rst
Examples/: Introduction.html  Quippy Descriptor Examples.html  index.html  quippy-ase-interoperability.html
FoX-4.0.3/: FoX-config.in  LICENSE  Makefile  Makefile.QUIP  arch.make
GAP_predict/: Makefile  descriptors.f95  gp_predict.f95  make_permutations_v2.f95
GAP_teach/: Makefile  clustering.f95  gp_teach.f95
GAProgs/: Makefile  comb.f95  convert_binary2xml.f95  lo.f95  teach_crib  teach_sparse.f95  teach_sparse_module.f95  test.xyz  test_qw_gradient.f95
Makefiles/: Makefile.Kaiju  Makefile.SunOS  Makefile.SunOS-mpi  Makefile.altix  Makefile.altix-mpi  Makefile.altix-mpi-scalapack  Makefile.bgq_gfortran  Makefile.bgq_gfortran_fen  Makefile.capablanca.inc  Makefile.capablanca.mpi  Makefile.capablanca.mpi.inc  Makefile.capablanca.serial  Makefile.capablanca.serial.inc  Makefile.cartman  Makefile.ccms  Makefile.common  Makefile.cray_xt3  Makefile.cray_xt3-mpi  Makefile.darwin_x86_64_gfortran  Makefile.darwin_x86_64_gfortran-mpi  Makefile.darwin_x86_64_gfortran_openmpi  Makefile.darwin_x86_64_ifort_icc  Makefile.eng  Makefile.eng-mpi  Makefile.gcc  Makefile.hector  Makefile.hp_xc  Makefile.hp_xc-mpi  Makefile.hp_xc_smplib  Makefile.hp_xc_smplib-mpi  Makefile.hpc.serial  Makefile.hpcf  Makefile.icc  Makefile.icc-mpi  Makefile.intel  Makefile.intel64  Makefile.jaws  Makefile.jaws-mpi  Makefile.jaws-mpi-scalapack  Makefile.jaws_serial.inc  (+50 more)
QUIP_Core/: .gitignore  AdjustablePotential.f95  ApproxFermi.f95  COPYRIGHT  CallbackPot.f95  ElectrostaticEmbed.f95  Ewald.f95  FilePot.f95  FoX.2.1.1.patch  Functions.f95  IP.f95  IPEwald.f95  IPModel_ASAP.f95  IPModel_ASAP2.f95  IPModel_BOP.f95  IPModel_BornMayer.f95  IPModel_Brenner.f95  IPModel_Brenner_2002.f95  IPModel_Brenner_Screened.f95  IPModel_Coulomb.f95  IPModel_Custom.f95  IPModel_EAM_Ercolessi_Adams.f95  IPModel_Einstein.f95  IPModel_FB.f95  IPModel_FC.f95  IPModel_FS.f95  IPModel_FX.f95  IPModel_GAP.f95  IPModel_Glue.f95  IPModel_HFdimer.f95  IPModel_KIM.f95  IPModel_LJ.f95  IPModel_LMTO_TBE.f95  IPModel_Morse.f95  IPModel_Multipoles.f95  IPModel_PartridgeSchwenke.f95  IPModel_SW.f95  IPModel_SW_VP.f95  IPModel_Si_MEAM.f95  IPModel_Spring.f95  (+105 more)
QUIP_FilePot_Drivers/: Makefile  cp2k_driver.f95  cp2k_driver_module.f95  cp2k_filepot.f95  vasp_driver.f95
QUIP_Programs/: Constraints_Demo.f95  DFTB_to_xml.f95  FC_to_xml.f95  GF_SC_notes.tex  Makefile  Makefile.programs  NRL_TB_to_xml.f95  QMMM_CP2K_md.f95  QMMM_md_buf.f95  README  align.f95  analytical_free_E_UI.f95  analyze_md_phonons.f95  annealing.f95  basin_exploration.f95  bulktest-quip.f95  bulktest.f95  calc_n_poles.f95  callback_test.f95  crack.dtd  crack.f95  crack.xml  crackparams.f95  cracktools.f95  create_hybrid_cluster.f95  descriptors_wrapper_example.f95  eval.f95  fgp.f95  fix_traj_latest.f95  hybrid_example.f95  lo.f95  local_E_fd.f95  local_random_search.f95  lotf.f95  lotf_metapot.f95  lotf_time.f95  lotf_time_metapot.f95  lotfpc_metapot.f95  lotfpc_try.f95  makecrack.f95  (+29 more)
QUIP_Utils/: Makefile  crackparams.f95  cracktools.f95  elasticity.f95  force_machine_learning_module.f95  phonons.f95  potential_test.f95  real_space_covariance.f95  restraints_constraints_xml.f95  restraints_xml.f95  steinhardt_qw.f95  transition_state.f95  ts_params.f95
Tests/: Makefile  README  cxyzreader.test  eval_NRL-TB.test  eval_SW.test  lotf_metapot.test  lotfpc.test.old  lotfpc_metapot.test  makecrack.test  md.test  md_ion_implant.test  metapot.test  metapot_test.f95  quippytest.py  table.test  tabletest.f95  test.py  test_cp2k_driver  test_cp2k_filepot  test_electrostatic_embed.py  test_eval  test_eval.in.xyz  test_farray.py  test_linearalgebra.py  test_md  test_md_ion_implant.py  test_md_velo
Tools/: AtomEye  Makefile  UI_integrate.f95  angle_distr.f95  mkdoc  (+38 more)
src/fox/: .gitignore  CMakeLists.txt  CTestConfig.cmake
src/fox/cmake/: CheckAbortIntrinsic.cmake  CheckAssociatedBug.cmake  CheckFlushIntrinsic.cmake  DetermineEOL.cmake
src/fox/common/: CMakeLists.txt
src/fox/dom/: CMakeLists.txt  m_dom_dom.F90
src/fox/examples/: CMakeLists.txt
src/fox/fsys/: CMakeLists.txt  fox_m_fsys_abort_flush.F90
src/fox/sax/: CMakeLists.txt
src/fox/utils/: CMakeLists.txt
src/fox/wcml/: CMakeLists.txt
src/fox/wkml/: CMakeLists.txt
src/fox/wxml/: CMakeLists.txt
(+2096 files in other folders)
